Fix main div overflow

--- a/pageStyle.css
+++ b/pageStyle.css
@@ -13,7 +13,6 @@ footer {
 .main {
 	width: 50%;
 	margin: 0;
-	position: absolute;
 	top: 50%;
 	left: 50%;
 	-ms-transform: translate(-50%, -50%);
